# CollisionAlgorithm

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTING.md  DOCUMENTATION_IMPROVEMENTS.md  README.md
.git-hooks/: pre-commit
.github/workflows/: ci.yml
doc/: USAGE_EXAMPLES.md  doc.md
doc/diagrams/: algorithm.puml  broadphase.puml  geometry-elements.puml  operations.puml  overview.puml  pipeline.puml  proximity.puml
examples/: NeedleInsertion.py  NeedleInsertionCycles.py  NeedleInsertionHaptics.py  RegressionStateScenes.regression-tests
examples/RecordState/: NeedleInsertion.txt  NeedleInsertionCycles.txt
src/CollisionAlgorithm/: BaseProximity.h
src/CollisionAlgorithm/algorithm/: InsertionAlgorithm.cpp  README.md
src/CollisionAlgorithm/broadphase/: README.md
src/CollisionAlgorithm/elements/: README.md
src/CollisionAlgorithm/filters/: README.md
src/CollisionAlgorithm/geometry/: README.md
src/CollisionAlgorithm/operations/: FindClosestProximity.h  NeedleOperations.cpp  NeedleOperations.h  README.md
src/CollisionAlgorithm/proximity/: EdgeProximity.h  FixedProximity.h  MechanicalProximity.h  MultiProximity.h  PointProximity.h  README.md  TetrahedronProximity.h  TriangleProximity.h
src/CollisionAlgorithm/toolbox/: README.md  TriangleToolBox.cpp
tests/scenes/: NeedleInsertion.py  NeedleInsertionCycles.py  NeedleInsertionHaptics.py
tests/scenes/RecordState/: NeedleInsertionHaptics.txt
tests/unit/: AABBBroadPhaseTest.cpp  CMakeLists.txt  FirstAlgorithmTest.cpp
